--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,17 +1,16 @@
-name: GitHub Actions Demo
-on: [push]
+name: Deploy Application
+
+on:
+  push:
+    branches: [master]
+
 jobs:
-  Explore-GitHub-Actions:
+  create-deployment-artifacts:
+    name: Create deployment artifacts
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - uses: actions/checkout@v2
+      - name: Compile CSS and Javascript
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          npm install
+          npm run prod
